Feature/infra 71 (#1)
* Stubbed out stuff for email sending

* Setup EmailRequest dto

* Properly setup SpringBoot to use preview features

* Stubbed out tests

* Setup email properties

* Updated readme

* Built more logic for email service

* Added email properties

* Made debugging configurable for SMTP

* Fixed compile error

* Added validation

* Added prod properties

* Removed validation that doesn't work

* Implemented EmailService

* Finished writing test

* Fixed bug in EmailService